[package]
name = "car_parking_simulator"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.17.3"




# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3